# rust_dev

fix_engine/: Cargo.toml  README.md  requirement.txt
fix_engine/config/: setting.conf
fix_engine/reference/: FIX4_2.xml  FIX4_2_Payload.xml  FIX4_4.xml  FIX4_4_Payload.xml  predefined_msg.json
fix_engine/src/: config.rs  connection.rs  macros.rs  main.rs  message_converter.rs  message_handling.rs  message_validator.rs  orderstore.rs  parse_payload_xml.rs  parse_xml.rs  sequence.rs
