[package]
name = "fix_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.20"
tempfile = "3.2.0"
log = "0.4"
text-colorizer = "1.0.0"
env_logger = "0.11.3"
quick-xml = "0.31.0"
prettytable = "0.10.0"
ini = "1.3.0"
indexmap = "2.2.6"
json = "0.12.4"
chrono = "0.4.38"
lazy_static = "1.4.0"
flexi_logger = "0.28.0"
fs2 = "0.4.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"
memmap2 = "0.9.4"
bincode = "0.9.2"